--- a/tools/sidekick/contactus/contactus.html
+++ b/tools/sidekick/contactus/contactus.html
@@ -3,32 +3,60 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dummy HTML for JSON URL Extraction</title>
+    <title>Contact Us Form</title>
+
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="javascript" href="./js/scripts.js" defer />
   </head>
   <body>
-    <!-- JSON URL in data attribute -->
-    <div class="json-link" data-url="https://example.com/data1.json">
-      Link with JSON URL in data attribute
+    <div class="form-container">
+      <h2>Contact Us</h2>
+      <form id="contact-form">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" required />
+          <div class="error-message" id="name-error">
+            Please enter your name.
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required />
+          <div class="error-message" id="email-error">
+            Please enter a valid email.
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="phone">Phone</label>
+          <input type="tel" id="phone" name="phone" />
+          <div class="error-message" id="phone-error">
+            Please enter a valid phone number.
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="subject">Subject</label>
+          <input type="text" id="subject" name="subject" required />
+          <div class="error-message" id="subject-error">
+            Please enter a subject.
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="message">Message</label>
+          <textarea id="message" name="message" rows="4" required></textarea>
+          <div class="error-message" id="message-error">
+            Please enter your message.
+          </div>
+        </div>
+
+        <button type="submit" class="submit-btn">Submit</button>
+        <div class="success-message" id="success-message">
+          Thank you! Your message has been sent.
+        </div>
+      </form>
     </div>
-
-    <!-- JSON URL in text content -->
-    <div id="json-url">https://example.com/data2.json</div>
-
-    <!-- JSON URL in script tag -->
-    <script id="json-script">
-      const dataUrl = "https://example.com/data3.json";
-    </script>
-
-    <!-- JSON URL in anchor href -->
-    <a href="https://example.com/data4.json" class="json-anchor"
-      >JSON Data Link</a
-    >
-
-    <!-- JSON URL in img src -->
-    <img
-      src="https://example.com/data5.json"
-      class="json-source"
-      alt="JSON Data Image"
-    />
   </body>
 </html>
